--- a/Spike/Spike/Views/Shared/_Layout.cshtml
+++ b/Spike/Spike/Views/Shared/_Layout.cshtml
@@ -38,5 +38,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
 </body>
 </html>
