added weatherInfo.main.js with some geo location; added Web API controller

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,11 @@
         </footer>
     </div>
 
+    <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
+    @Scripts.Render("~/js/WeatherInfo.main.js")
+    @Scripts.Render("~/js/GeoLocator.js")
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/weatherInfo")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
