added JS for current location's city, state, and country (temporary)

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
@@ -10,7 +10,7 @@
     <ul class="list-group">
         <li class="list-group-item">
             <span class="badge"><span id="currentLocationTemperature">54</span>&deg; <span id="currentLocationUnitType">F</span></span>
-            Current Location (city name)
+            Current Location (<span id="currentLocationCity">Here</span><span id="currentLocationState"></span>&nbsp;<span id="currentLocationCountry"></span>)
         </li>
     </ul>
     @foreach (var item in Model.MainItems)
