added angular JS (more references + inclusion in _layout.cshtml)

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - Weather</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/scripts/angular.min.js")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
