replaced GeoLocator.getCurrentLocation method and friends with GeoLocatorService for some reason, the data returned to the controller needs to be an array, or otherwise the pointers get messed up apparently

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
@@ -6,6 +6,7 @@
 
 @Scripts.Render("~/js/main/WeatherController.js")
 @Scripts.Render("~/js/main/LocationService.js")
+@Scripts.Render("~/js/main/GeoLocationService.js")
 
 <h2>Locations</h2>
 
