replaced weather helper JS class with angular weather service

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
@@ -5,6 +5,7 @@
 }
 
 @Scripts.Render("~/js/main/WeatherController.js")
+@Scripts.Render("~/js/main/WeatherService.js")
 @Scripts.Render("~/js/main/LocationService.js")
 @Scripts.Render("~/js/main/GeoLocationService.js")
 
@@ -14,7 +15,7 @@
     <div>
         <ul class="list-group">
             <li class="list-group-item">
-                <span class="badge"><span id="currentLocationTemperature">54</span>&deg; <span id="currentLocationUnitType">F</span></span>
+                <span class="badge"><span data-ng-cloak>{{currentLocationTemperature}}</span>&deg; <span data-ng-cloak>{{currentLocationUnitType}}</span></span>
                 Current Location (<span data-ng-cloak>{{city}}{{state}}&nbsp;{{country}}</span>)
             </li>
         </ul>
