--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
@@ -1,4 +1,4 @@
-﻿@using WeatherInfo.Web.Models.Weather
+﻿@using WeatherInfo.Application.Models.Weather
 @model MainViewModel
 @{
     ViewBag.Title = "Main";
