Added Boostrap UI. Needed to add angular-ui-bootstrap-modal.js manually I got  angular-ui-bootstrap-modal.js from https://github.com/fdietz/recipes-with-angular-js-examples/blob/master/chapter8/recipe7/js/angular-ui-bootstrap-modal.js I also need to add the last line manually - I got it from another site I worked on. Other changes: 1. moved angular weather app assignment to main JS file so it's only created once 2. Added search by "address" - type in location info and get back Geo coords 3. Location controller - will move other location methods from weather controller to here later

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
@@ -4,30 +4,49 @@
     ViewBag.Title = "Main";
 }
 
+<div data-ng-app="weather-main">
+    <div data-ng-controller="locationController" data-ng-init="init()">
+        <h2>
+            Locations &nbsp; &nbsp;
+            <button type="button" class="btn" data-ng-click="showAddLocationForm()">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            </button>
+        </h2>
+
+        <div modal="showModal" close="modalCancel()">
+            <div class="col-md-3"></div>
+            <add-location class="col-md-6"></add-location>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+
+    <div data-ng-controller="weatherController" data-ng-init="init()">
+        <div>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <span class="badge"><span data-ng-cloak>{{currentLocationTemperature}}</span>&deg; <span data-ng-cloak>{{currentLocationUnitType}}</span></span>
+                    Current Location (<span data-ng-cloak>{{city}}{{state}}&nbsp;{{country}}</span>)
+                </li>
+            </ul>
+            @foreach (var item in Model.MainItems)
+            {
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <span class="badge">@item.CurrentTemperature&deg; @Model.UnitType</span>
+                        @item.CityName
+                    </li>
+                </ul>
+            }
+        </div>
+
+    </div>
+</div>
+
+@section scripts
+{
 @Scripts.Render("~/js/main/WeatherController.js")
+@Scripts.Render("~/js/main/LocationController.js")
 @Scripts.Render("~/js/main/WeatherService.js")
 @Scripts.Render("~/js/main/LocationService.js")
 @Scripts.Render("~/js/main/GeoLocationService.js")
-
-<h2>Locations</h2>
-
-<div data-ng-app="weather-main" data-ng-controller="weatherController" data-ng-init="init()">
-    <div>
-        <ul class="list-group">
-            <li class="list-group-item">
-                <span class="badge"><span data-ng-cloak>{{currentLocationTemperature}}</span>&deg; <span data-ng-cloak>{{currentLocationUnitType}}</span></span>
-                Current Location (<span data-ng-cloak>{{city}}{{state}}&nbsp;{{country}}</span>)
-            </li>
-        </ul>
-        @foreach (var item in Model.MainItems)
-        {
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <span class="badge">@item.CurrentTemperature&deg; @Model.UnitType</span>
-                    @item.CityName
-                </li>
-            </ul>
-        }
-    </div>
-
-</div>
+}
