--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
@@ -35,10 +35,11 @@
     </div>
 
     <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
-    @Scripts.Render("~/js/WeatherInfo.main.js")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/weatherInfo")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/angular-ui/angular-ui-bootstrap-modal.js")
+    @Scripts.Render("~/js/WeatherInfo.main.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
