--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
@@ -4,8 +4,7 @@
     ViewBag.Title = "Main";
 }
 
-<div data-ng-app="weather-main">
-    <div data-ng-controller="locationController" data-ng-init="init()">
+<div data-ng-app="weather-main" data-ng-controller="locationController" data-ng-init="init()">
         <h2>
             Locations &nbsp; &nbsp;
             <button type="button" class="btn" data-ng-click="showAddLocationForm()">
@@ -18,14 +17,20 @@
             <add-location class="col-md-6"></add-location>
             <div class="col-md-3"></div>
         </div>
-    </div>
 
     <div data-ng-controller="weatherController" data-ng-init="init()">
+        <input type="hidden" data-ng-model="unitType" />
         <div>
             <ul class="list-group">
                 <li class="list-group-item">
                     <span class="badge"><span data-ng-cloak>{{currentLocationTemperature}}</span>&deg; <span data-ng-cloak>{{currentLocationUnitType}}</span></span>
                     Current Location (<span data-ng-cloak>{{city}}{{state}}&nbsp;{{country}}</span>)
+                </li>
+            </ul>
+            <ul class="list-group" data-ng-repeat="location in locations" data-ng-cloak>
+                <li class="list-group-item">
+                    <span class="badge"><span data-ng-cloak><location-Temperature get-weather="getWeather(locationData, successCallback)" latitude="{{location.latitude}}" longitude="{{location.longitude}}"></location-Temperature></span>&deg; <span data-ng-cloak>{{unitType}}</span></span>
+                    <span data-ng-cloak>{{location.city}}{{location.state}}&nbsp;{{location.country}}</span>
                 </li>
             </ul>
             @foreach (var item in Model.MainItems)
