added some color to buttons

--- a/WeatherInfo/Web/WeatherInfo.Web/Templates/Location/Add.html
+++ b/WeatherInfo/Web/WeatherInfo.Web/Templates/Location/Add.html
@@ -4,13 +4,8 @@
 <div class="modal-body" style="background-color: white;">
     <div style="background-color: white; margin-bottom: 15px;">
         <div>
-            <input type="text" placeholder="Enter Location Here" data-ng-model="address" />
-        </div>
-        <div style="clear: both; margin-bottom: 10px;">&nbsp;</div>
-        <div>
-            <button class="btn" data-ng-click="searchLocation()">Search</button>
-            &nbsp;&nbsp;
-            <button class="btn" data-ng-click="modalCancel()">Close</button>
+            <input type="text" placeholder="Enter Location Here" data-ng-model="address" />&nbsp;
+            <button class="btn btn-success" data-ng-click="searchLocation()">Search</button>
         </div>
     </div>
     <div>&nbsp;</div>
