--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
         </footer>
     </div>
 
-    <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
+    <script src="https://maps.google.com/maps/api/js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/weatherInfo")
     @Scripts.Render("~/bundles/bootstrap")
