added autofocus to add form

--- a/WeatherInfo/Web/WeatherInfo.Web/Templates/Location/Add.html
+++ b/WeatherInfo/Web/WeatherInfo.Web/Templates/Location/Add.html
@@ -4,7 +4,7 @@
 <div class="modal-body" style="background-color: white;">
     <div style="background-color: white; margin-bottom: 15px;">
         <div>
-            <input type="text" placeholder="Enter Location Here" data-ng-model="address" />&nbsp;
+            <input type="text" placeholder="Enter Location Here" data-ng-model="address" autofocus />&nbsp;
             <button class="btn btn-success" data-ng-click="searchLocation()">Search</button>
         </div>
     </div>
