replaced "get more" span with anchor tag

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
@@ -45,7 +45,7 @@
             </ul>
             <span data-ng-show="isLoading">loading...</span>
             <span data-ng-show="isIos() && !isLoading">Pull up to get more data</span>
-            <span data-ng-show="showGetMore && !isIos() && !isLoading" data-ng-click="getLocations()">... get more ...</span>
+            <a data-ng-show="showGetMore && !isIos() && !isLoading" data-ng-click="getLocations()">... get more ...</a>
         </div>
 
     </div>
