updated UI text

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Main", "Main", "Weather")</li>
+                    <li>@Html.ActionLink("by Location", "Main", "Weather")</li>
                 </ul>
             </div>
         </div>
