--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Weather/Main.cshtml
@@ -6,7 +6,7 @@
 
 <div data-ng-app="weather-main" data-ng-controller="locationController" data-ng-init="init()">
         <h2>
-            Locations &nbsp; &nbsp;
+            Weather by Location &nbsp; &nbsp;
             <button type="button" class="btn btn-info" data-ng-click="showAddLocationForm()">
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
