added UI elements for remove item from list - now need to add the actual code to implement.

--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("by Location", "Main", "Weather")</li>
+                    <li><a id="setEditMode" href="#" onclick="weatherInfo.setEditMode(!weatherInfo.isEditMode()); return false;">Edit</a></li>
                 </ul>
             </div>
         </div>
